# Resume-Tailorator

./: .gitignore  AGENTS.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  coverage.json  main.py  pyproject.toml
.github/agents/: WORKFLOW.md  WORKFLOW_TEMPLATE.md  senior-devops-engineer.agent.md
.github/instructions/: docker.instructions.md
.github/prompts/: add-monitoring.prompt.md  docker-setup.prompt.md  security-audit.prompt.md
.github/skills/: agents.skill.md  config.skill.md  cv-diff.skill.md  main.skill.md  markdown.skill.md  models.skill.md  observability.skill.md  state.skill.md  watcher.skill.md
.github/workflow/: WORKFLOW_CHEATSHEET.md
.github/workflows/: ci.yml  release.yml
files/: job_posting.md
memory/: __init__.py  models.py  parser.py  repository.py  service.py  sqlite_repository.py
models/: workflow.py
models/agents/: output.py
resume_tailorator/: __main__.py  main.py
resume_tailorator/memory/: __init__.py  models.py  parser.py  repository.py  service.py  (+1 more)
tests/: conftest.py  test_cli_typer.py  test_cv_diff.py  test_job_scraper.py  test_job_scraper_helpers.py  test_job_scraper_integration.py  test_main.py  test_main_guard.py  test_parsing_determinism.py  test_quality_gate.py  test_quality_gate_models.py  test_report_agent.py  test_report_integration.py  test_resume_converter.py  test_resume_output_converter.py  test_smoke.py  test_verbose_agent.py
tools/: job_scraper_helpers.py
utils/: cv_diff.py  markdown_writer.py  resume_converter.py  resume_output_converter.py  validate_inputs.py
workflows/: __init__.py  agents.py
(+25 files in other folders)
